--- a/front-end/index.html
+++ b/front-end/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EL BAHJA</title>
+
+    <script src="https://www.paypal.com/sdk/js?client-id=AdgKMaSuqRB9Dal_fKpO0OW7AAsXSPyNpFeCWH9qXCEpN_kloztcmQ8VuZ_KsAgea0u05xpN_5a95eMl"></script>
   </head>
   <body>
     <div id="root"></div>
