--- a/front-end/index.html
+++ b/front-end/index.html
@@ -10,6 +10,9 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <!-- <script type="module" src="/src/main.jsx"></script> -->
+    <!-- GOOD: relative paths -->
+    <link rel="icon" type="image/svg+xml" href="./images/logo.png" />
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
